kubernetesDeploymentForPortfoliocms/portfoliocmsbackenddeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfoliocms-backend-deployment
  labels:
    app: portfoliocmsbackend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: portfoliocmsbackend

  template:
    metadata:
      labels:
        app: portfoliocmsbackend

    spec:
      containers:
        - name: portfoliocmsbackend
          image: muhammadqaissum/portfoliocmsbackendimages:v1

          ports:
            - containerPort: 5001
