kubernetesDeploymentForPortfoliocms/portfoliocmsIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfoliocms-ingress
spec:
  ingressClassName: nginx

  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfoliocms-service
                port:
                  number: 3001
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: portfoliocms-backend-service
                port:
                  number: 5001
